GNOME Bugzilla – Bug 323904
GtkEditable header is slightly incorrect
Last modified: 2010-09-17 18:25:42 UTC
Since GtkEditable is an interface it should have a typedef called GtkEditableIface and not GtkEditableClass. It's also missing a macro to fetch interface which follows the standard conventions: *_GET_IFACE instead of *_GET_CLASS.
Created attachment 55902 [details] [review] proposed patch Rename struct, add new macro. Backwards compatibility is preserved using a typedef. No deprecation is enforced, perhaps the old struct/macros should be protected by a n ifdef.
Is this misnomer causing problems for you ?
(In reply to comment #2) > Is this misnomer causing problems for you ? > Yes, the header scanner and code generator in pygtk assumes that the name of an interface ends with IfAce.
I'd say the header scanner in pygtk is a bit too picky then. Is this the only place where it falls over ?
This could be renamed in GTK+ 3, if it really helps.
Created attachment 170003 [details] [review] Use GtkEditableInterface instead GtkEditableClass Updated patch against current master I've used *Interface because is the name used in the G_DEFINE_INTERFACE() macro
Review of attachment 170003 [details] [review]: lets do this for 3.0
Comment on attachment 170003 [details] [review] Use GtkEditableInterface instead GtkEditableClass commit efbf04236e04c3c9e5ce7466738d6c33e552eb0f
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.