Change GtkEditable typedef from GtkEditableClass to GtkEditabeInterface

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=323904