gtk/gtkspinbutton.c
@@ -97,7 +97,7 @@ enum
   LAST_SIGNAL
 };
 
-static void gtk_spin_button_editable_init  (GtkEditableClass   *iface);
+static void gtk_spin_button_editable_init  (GtkEditableInterface *iface);
 static void gtk_spin_button_finalize       (GObject            *object);
 static void gtk_spin_button_destroy        (GtkObject          *object);
 static void gtk_spin_button_set_property   (GObject         *object,
@@ -405,7 +405,7 @@ gtk_spin_button_class_init (GtkSpinButtonClass *class)
 }
 
 static void
-gtk_spin_button_editable_init (GtkEditableClass *iface)
+gtk_spin_button_editable_init (GtkEditableInterface *iface)
 {
   iface->insert_text = gtk_spin_button_insert_text;
 }
@@ -1523,7 +1523,10 @@ gtk_spin_button_insert_text (GtkEditable *editable,
   GtkEntry *entry = GTK_ENTRY (editable);
   GtkSpinButton *spin = GTK_SPIN_BUTTON (editable);
   GtkSpinButtonPrivate *priv = spin->priv;
-  GtkEditableClass *parent_editable_iface = g_type_interface_peek (gtk_spin_button_parent_class, GTK_TYPE_EDITABLE);
+  GtkEditableInterface *parent_editable_iface;
+
+  parent_editable_iface = g_type_interface_peek (gtk_spin_button_parent_class,
+                                                 GTK_TYPE_EDITABLE);
 
   if (priv->numeric)
     {
